# visual-context-router

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.codex-plugin/: plugin.json
docs/: architecture.md  benchmarks.md  codex-install.md  positioning.md  prompts.md
examples/: sample-observation.json
scripts/: benchmark_examples.py  doctor.py  install_codex_plugin.py  make_demo_images.py  make_readme_assets.py  vcr_mcp_server.py
skills/visual-context-router/: SKILL.md
tests/: test_benchmark_examples.py  test_core.py  test_doctor.py  test_installer.py  test_mcp_server.py  test_readme_assets.py
visual_context_router/: __init__.py  cli.py  core.py
